--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced Glassmorphism Calculator | Naveen</title>
-    <meta name="description" content="A simple yet advanced calculator with a beautiful glassmorphism design. Responsive and precision-engineered.">
+    <title>Simple Calculator Online – Fast & Free Math Calculator</title>
+
+<meta name="description" content="Use this simple online calculator to perform addition, subtraction, multiplication, and division instantly. Free, fast, and easy to use.">
+
+<meta name="keywords" content="simple calculator, online calculator, math calculator, free calculator, basic calculator">
+
+<meta name="author" content="AAJHub Tools">
+
+<meta name="robots" content="index, follow">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         :root {
             --bg: #0f172a;
