--- a/index.html
+++ b/index.html
@@ -1,107 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- ===== PRIMARY SEO ===== -->
+  <!-- SEO -->
   <title>Simple Calculator Online – Free, Fast & Accurate Math Tool</title>
-  <meta name="description" content="Use this simple calculator online to perform fast and accurate math calculations including addition, subtraction, multiplication, division, square root and trigonometry. Free and easy to use.">
-  <meta name="keywords" content="simple calculator online, free calculator, math calculator, basic calculator, scientific calculator, online math tool">
+  <meta name="description" content="Simple Calculator Online is a free and easy-to-use math calculator for addition, subtraction, multiplication, division, square root and trigonometric calculations.">
+  <meta name="keywords" content="simple calculator online, free calculator, math calculator, scientific calculator, online math tool">
   <meta name="author" content="AAJHub Tools">
   <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://simple-calculator-2026.vercel.app/" />
 
-  <!-- Canonical -->
-  <link rel="canonical" href="https://simple-calculator-2026.vercel.app/">
-
-  <!-- ===== Open Graph ===== -->
+  <!-- Open Graph -->
   <meta property="og:title" content="Simple Calculator Online – Free Math Tool">
-  <meta property="og:description" content="A free online calculator for fast and accurate math calculations including basic and scientific operations.">
+  <meta property="og:description" content="Perform fast and accurate math calculations online using our free calculator.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://simple-calculator-2026.vercel.app/">
-  <meta property="og:image" content="https://simple-calculator-2026.vercel.app/preview.png">
-
-  <!-- ===== Twitter Card ===== -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Simple Calculator Online – Free & Fast Math Tool">
-  <meta name="twitter:description" content="Perform instant math calculations online with this free and easy-to-use calculator.">
-  <meta name="twitter:image" content="https://simple-calculator-2026.vercel.app/preview.png">
-
-  <!-- Favicon -->
-  <link rel="icon" href="/favicon.ico">
-
-  <!-- ===== JSON-LD SCHEMA ===== -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "WebApplication",
-    "name": "Simple Calculator Online",
-    "url": "https://simple-calculator-2026.vercel.app/",
-    "applicationCategory": "CalculatorApplication",
-    "operatingSystem": "All",
-    "description": "Free online calculator to perform basic and scientific math calculations instantly.",
-    "browserRequirements": "Requires JavaScript",
-    "offers": {
-      "@type": "Offer",
-      "price": "0",
-      "priceCurrency": "USD"
-    }
-  }
-  </script>
 
   <style>
     :root {
       --bg: #0f172a;
-      --glass: rgba(255, 255, 255, 0.05);
-      --glass-border: rgba(255, 255, 255, 0.1);
+      --glass: rgba(255,255,255,0.06);
+      --border: rgba(255,255,255,0.12);
       --accent: #8b5cf6;
-      --accent-glow: rgba(139, 92, 246, 0.3);
       --text: #f8fafc;
+      --muted: #cbd5f5;
     }
 
     * {
       box-sizing: border-box;
       margin: 0;
       padding: 0;
-      font-family: 'Inter', -apple-system, sans-serif;
+      font-family: Inter, system-ui, sans-serif;
     }
 
     body {
       background: radial-gradient(circle at top left, #1e1b4b, #0f172a);
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
       color: var(--text);
+      line-height: 1.6;
+    }
+
+    header {
+      text-align: center;
+      padding: 3rem 1rem 2rem;
+    }
+
+    header h1 {
+      font-size: 2.5rem;
+      margin-bottom: 0.75rem;
+    }
+
+    header p {
+      max-width: 720px;
+      margin: auto;
+      color: var(--muted);
+    }
+
+    .calculator-wrapper {
+      display: flex;
+      justify-content: center;
+      padding: 2rem 1rem;
     }
 
     .calculator {
       background: var(--glass);
       backdrop-filter: blur(20px);
-      border: 1px solid var(--glass-border);
+      border: 1px solid var(--border);
       border-radius: 2rem;
       width: 380px;
       padding: 2rem;
-      box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.5);
+      box-shadow: 0 25px 50px rgba(0,0,0,0.5);
     }
 
     .display {
-      margin-bottom: 2rem;
       text-align: right;
       padding: 1rem;
-      min-height: 120px;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-end;
+      min-height: 110px;
+      margin-bottom: 1.5rem;
     }
 
     #previous-val {
-      font-size: 1.1rem;
       opacity: 0.5;
+      font-size: 1rem;
     }
 
     #current-val {
-      font-size: 3rem;
+      font-size: 2.8rem;
       font-weight: 600;
       word-break: break-all;
     }
@@ -114,83 +99,154 @@
 
     button {
       background: var(--glass);
-      border: 1px solid var(--glass-border);
+      border: 1px solid var(--border);
       border-radius: 1rem;
-      padding: 1.25rem;
+      padding: 1.2rem;
       color: white;
-      font-size: 1.25rem;
+      font-size: 1.2rem;
       cursor: pointer;
       transition: 0.2s;
     }
 
     button:hover {
-      background: rgba(255, 255, 255, 0.1);
+      background: rgba(255,255,255,0.12);
       transform: translateY(-2px);
     }
 
     .btn-op { color: #22d3ee; }
-    .btn-sci { font-size: 0.9rem; color: #a78bfa; }
+    .btn-sci { color: #a78bfa; font-size: 0.9rem; }
     .btn-ac { color: #f87171; grid-column: span 2; }
-
     .btn-eq {
       background: linear-gradient(135deg, #8b5cf6, #ec4899);
       border: none;
     }
 
+    section {
+      max-width: 960px;
+      margin: auto;
+      padding: 3rem 1.5rem;
+    }
+
+    section h2 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
+
+    section p, section li {
+      color: var(--muted);
+      margin-bottom: 0.75rem;
+    }
+
+    ul {
+      padding-left: 1.2rem;
+    }
+
+    footer {
+      text-align: center;
+      padding: 2rem;
+      border-top: 1px solid var(--border);
+      color: var(--muted);
+    }
+
     @media (max-width: 420px) {
       .calculator { width: 95vw; }
+      header h1 { font-size: 2rem; }
     }
   </style>
 </head>
 
 <body>
 
-<!-- SEO Content (Hidden, Google-readable) -->
-<header style="position:absolute; left:-9999px;">
+<header>
   <h1>Simple Calculator Online</h1>
   <p>
-    Simple Calculator Online is a free math calculator that helps you perform
-    addition, subtraction, multiplication, division, square root, sine,
-    cosine, and tangent calculations instantly.
+    A fast, free and easy-to-use online calculator to perform everyday math
+    calculations including basic and scientific operations directly in your browser.
   </p>
 </header>
 
-<div class="calculator">
-  <div class="display">
-    <div id="previous-val"></div>
-    <div id="current-val">0</div>
-  </div>
+<div class="calculator-wrapper">
+  <div class="calculator">
+    <div class="display">
+      <div id="previous-val"></div>
+      <div id="current-val">0</div>
+    </div>
 
-  <div class="grid">
-    <button class="btn-ac" onclick="clearDisplay()">AC</button>
-    <button class="btn-op" onclick="deleteLast()">DEL</button>
-    <button class="btn-op" onclick="appendOperator('/')">÷</button>
+    <div class="grid">
+      <button class="btn-ac" onclick="clearDisplay()">AC</button>
+      <button class="btn-op" onclick="deleteLast()">DEL</button>
+      <button class="btn-op" onclick="appendOperator('/')">÷</button>
 
-    <button class="btn-sci" onclick="appendFunc('Math.sin')">sin</button>
-    <button class="btn-sci" onclick="appendFunc('Math.cos')">cos</button>
-    <button class="btn-sci" onclick="appendFunc('Math.tan')">tan</button>
-    <button class="btn-op" onclick="appendOperator('*')">×</button>
+      <button class="btn-sci" onclick="appendFunc('Math.sin')">sin</button>
+      <button class="btn-sci" onclick="appendFunc('Math.cos')">cos</button>
+      <button class="btn-sci" onclick="appendFunc('Math.tan')">tan</button>
+      <button class="btn-op" onclick="appendOperator('*')">×</button>
 
-    <button onclick="appendNumber('7')">7</button>
-    <button onclick="appendNumber('8')">8</button>
-    <button onclick="appendNumber('9')">9</button>
-    <button class="btn-op" onclick="appendOperator('-')">-</button>
+      <button onclick="appendNumber('7')">7</button>
+      <button onclick="appendNumber('8')">8</button>
+      <button onclick="appendNumber('9')">9</button>
+      <button class="btn-op" onclick="appendOperator('-')">-</button>
 
-    <button onclick="appendNumber('4')">4</button>
-    <button onclick="appendNumber('5')">5</button>
-    <button onclick="appendNumber('6')">6</button>
-    <button class="btn-op" onclick="appendOperator('+')">+</button>
+      <button onclick="appendNumber('4')">4</button>
+      <button onclick="appendNumber('5')">5</button>
+      <button onclick="appendNumber('6')">6</button>
+      <button class="btn-op" onclick="appendOperator('+')">+</button>
 
-    <button onclick="appendNumber('1')">1</button>
-    <button onclick="appendNumber('2')">2</button>
-    <button onclick="appendNumber('3')">3</button>
-    <button class="btn-eq" onclick="calculate()">=</button>
+      <button onclick="appendNumber('1')">1</button>
+      <button onclick="appendNumber('2')">2</button>
+      <button onclick="appendNumber('3')">3</button>
+      <button class="btn-eq" onclick="calculate()">=</button>
 
-    <button style="grid-column: span 2" onclick="appendNumber('0')">0</button>
-    <button onclick="appendNumber('.')">.</button>
-    <button class="btn-sci" onclick="appendFunc('Math.sqrt')">√</button>
+      <button style="grid-column: span 2" onclick="appendNumber('0')">0</button>
+      <button onclick="appendNumber('.')">.</button>
+      <button class="btn-sci" onclick="appendFunc('Math.sqrt')">√</button>
+    </div>
   </div>
 </div>
+
+<section>
+  <h2>About Our Calculator</h2>
+  <p>
+    Simple Calculator Online is designed to help students, professionals, and
+    everyday users solve math problems quickly without installing any software.
+    It runs directly in your browser and works on all devices.
+  </p>
+</section>
+
+<section>
+  <h2>How to Use the Calculator</h2>
+  <ul>
+    <li>Enter numbers using the number buttons.</li>
+    <li>Select arithmetic operators like +, −, ×, or ÷.</li>
+    <li>Use scientific functions such as sin, cos, tan, and square root.</li>
+    <li>Press the equals (=) button to calculate the result.</li>
+    <li>Use AC to clear everything or DEL to remove the last entry.</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Why Our Tool Is the Best</h2>
+  <ul>
+    <li>100% free with no registration required</li>
+    <li>Instant and accurate calculations</li>
+    <li>Modern, distraction-free interface</li>
+    <li>Works on mobile, tablet, and desktop</li>
+    <li>No ads, no tracking, no data collection</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Get Started Now</h2>
+  <p>
+    Simply scroll up and start calculating instantly. Whether you need quick
+    arithmetic or basic scientific calculations, Simple Calculator Online is
+    built to save your time and improve productivity.
+  </p>
+</section>
+
+<footer>
+  © 2026 AAJHub Tools · Simple Calculator Online
+</footer>
 
 <script>
   let currentInput = '';
@@ -245,7 +301,6 @@
         displayInput += ')';
         close++;
       }
-
       const result = eval(currentInput);
       prevVal.innerText = displayInput + ' =';
       displayInput = result.toString();
