--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Simple Calculator Online – Free, Fast & Accurate Math Tool</title>
   <meta name="description" content="Use Simple Calculator Online for fast and accurate math calculations. Perform addition, subtraction, multiplication, division, square root and trigonometric functions instantly for free.">
   <meta name="keywords" content="simple calculator online, free calculator, online math calculator, scientific calculator, basic calculator">
-  <meta name="author" content="AAJHub Tools">
+  <meta name="author" content="AAJHub Free Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://simple-calculator-2026.vercel.app/" />
 
