--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 <body>
 
 <header>
-  <h1>Simple Calculator Online</h1>
+  <h1>Simple Calculator Online 2026</h1>
   <p>
     A fast, free and accurate online calculator for everyday math and scientific calculations.
   </p>
