--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta name="author" content="AAJHub Free Tools">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://simple-calculator-2026.vercel.app/" />
+  <meta name="google-site-verification" content="KDw5tPII9eQrAo3WJ9r-rJ7j-AWF-jks2cdZZ-2d1n0" />
 
   <!-- OPEN GRAPH -->
   <meta property="og:title" content="Simple Calculator Online – Free Math Calculator">
